--- a/CatPhotoApp/index.html
+++ b/CatPhotoApp/index.html
@@ -15,6 +15,7 @@
                 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
             </a>
         </section>
+
         <section>
             <h2>Cat Lists</h2>
             <h3>Things cats love:</h3>
@@ -34,10 +35,20 @@
                 <li>other cats</li>
             </ol>
             <figure>
-                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg">
+                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
+                <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
             </figure>
         </section>
-    </main>
-    
+
+        <section>
+            <h2>Cat Form</h2> 
+            <form action="https://freecatphotoapp.com/submit-cat-photo">
+                <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+                <button type="submit">Submit</button>
+            </form>           
+        </section>
+
+
+    </main>    
 </body>
 </html>
