--- a/CatPhotoApp/index.html
+++ b/CatPhotoApp/index.html
@@ -45,21 +45,22 @@
             <form action="https://freecatphotoapp.com/submit-cat-photo">
                 <fieldset>
                     <legend>Is your cat an indoor or outdoor cat?</legend>
-                    <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor"> Indoor</label>
+                    <label><input checked type="radio" id="indoor" name="indoor-outdoor" value="indoor"> Indoor</label>
                     <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor"> Outdoor</label>
                 </fieldset>
                 <fieldset>
                     <legend>What's your cat's personality?</legend>
-                    <input id="loving" type="checkbox" name="personality"> <label for="loving">Loving</label>
-                    <input id="lazy" type="checkbox" name="personality"> <label for="lazy">Lazy</label>
-                    <input id="energetic" type="checkbox" name="personality"> <label for="energetic">Energetic</label>
+                    <input checked id="loving" type="checkbox" name="personality" value="loving"> <label for="loving">Loving</label>
+                    <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
+                    <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
                 </fieldset>
                 <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                 <button type="submit">Submit</button>
             </form>           
         </section>
-
-
     </main>    
+    <footer>
+        <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a> </p>
+    </footer>
 </body>
 </html>
