--- a/CatPhotoApp/index.html
+++ b/CatPhotoApp/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Photo App</title>
 </head>
-<body>
+<body bgcolor="gray">
     <main>
         <h1>CatPhotoApp</h1>
         <section>
