--- a/CafeMenu/index.html
+++ b/CafeMenu/index.html
@@ -2,16 +2,20 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <title>Cafe Menu</title>
     </head>
     <body>
-        <main>
-            <h1>CAMPER CAFE</h1>  
-            <p>Est. 2020</p>
-            <section>
-                <h2>Coffee</h2>
-            </section>
-        </main>
+        <div class="menu">
+            <main>
+                <h1>CAMPER CAFE</h1>  
+                <p>Est. 2020</p>
+                <section>
+                    <h2>Coffee</h2>
+                    <article></article>
+                </section>
+            </main>
+        </div>
     </body>
 </html>
