--- a/CafeMenu/index.html
+++ b/CafeMenu/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="menu">
             <main>
-                <h1>CAMPER CAFE</h1>  
+                <h1>BRAIN BLAST CAFE</h1>  
                 <p class="established">Est. 2020</p>
                 <hr/>
                 <section>
@@ -46,11 +46,12 @@
                     </article>
                 </section>
             </main>
+            <hr class="bottom-line"/>
             <footer>
                 <p>
                     <a href="https://www..freecodecamp.org">Visit our website</a>
                 </p>
-                <p>123 Free Code Camp Drive</p>
+                <p class="address">123 Free Code Camp Drive</p>
             </footer>
         </div>
     </body>
