--- a/SetOfColoredMarkers/index.html
+++ b/SetOfColoredMarkers/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>CSS Colored Markers</h1>
-    <div class="container"></div>
-    <div class="marker one"></div>
-    <div class="marker two"></div>
-    <div class="marker three"></div>
+    <div class="container">
+        <div class="marker one"></div>
+        <div class="marker two"></div>
+        <div class="marker three"></div>
+    </div>    
 </body>
 </html>
