--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -9,5 +9,23 @@
 <body>
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
+    <form action="https://register-demo.freecodecamp.org" method="post">
+        <fieldset>
+            <label>Enter Your First Name: 
+                <input>
+            </label>
+            <label>Enter Your Last Name: 
+                <input>
+            </label>
+            <label>Enter Your Email: 
+                <input>
+            </label>
+            <label>Create a New Password: 
+                <input>
+            </label>
+        </fieldset>
+        <fieldset></fieldset>
+        <fieldset></fieldset>
+    </form>
 </body>
 </html>
