--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -17,10 +17,24 @@
             <label for="new-password">Create a New Password: <input id="new-password" type="password" pattern="[a-z0-5]{8,}" required/></label>
         </fieldset>
         <fieldset>
-            <label><input type="radio" name="account-type"/>Personal</label>
-            <label><input type="radio" name="account-type"/>Business</label>
+            <legend>Account type (required)</legend>
+            <label id="personal-account"><input id="personal-account" type="radio" name="account-type" checked/>Personal</label>
+            <label id="business-account"><input id="business-account" type="radio" name="account-type"/>Business</label>
         </fieldset>
-        <fieldset></fieldset>
+        <fieldset>
+            <label>Upload a profile picture: <input type="file"/></label>
+            <label>Input your age (years): <input type="number" min="13" max="120"/></label>
+            <label> How did you hear about us? 
+                <select>
+                    <option>(select one)</option>
+                    <option>freeCodeCamp News</option>
+                    <option>freeCodeCamp YouTube Channel</option>
+                    <option>freeCodeCamp Forum</option>
+                    <option>Other</option>
+                </select>
+            </label>
+        </fieldset>
+        <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required/> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>        
         <input type="submit" value="Submit"/>
     </form>
 </body>
