--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -35,8 +35,9 @@
             </label>
             <label for="bio">Provide a bio: <textarea name="bio" id="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea></label>
         </fieldset>
-        <label for="terms-and-conditions"><input name="terms" id="terms-and-conditions" type="checkbox" required/> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>        
-        <input type="submit" value="Submit"/>
+        <label for="terms-and-conditions"><input name="terms" id="terms-and-conditions" type="checkbox" required/> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+        <input class="inline" type="submit" value="Submit"/>
+        </label>        
     </form>
 </body>
 </html>
