--- a/RothkoPainting/index.html
+++ b/RothkoPainting/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="canvas"></div>
+    <div class="frame">
+        <div class="canvas">
+            
+        </div>
+    </div>
 </body>
 </html>
