--- a/PhotoGallery/index.html
+++ b/PhotoGallery/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <header class="header">
-        <h1>css flaxbox photo gallery</h1>
+        <h1>CSS FLEXBOX PHOTO GALLERY</h1>
     </header>
     <div class="gallery">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="sleepy-cat">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="tummy-kitty">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="stoic-cat">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="undercover-cat">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="snowwhite-kitty">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="two-sibling-kitties">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="spying-kitty">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="orange-kitty-cat">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="two-kittens-chillen">
     </div>
 </body>
 </html>
