--- a/NutritionLabel/index.html
+++ b/NutritionLabel/index.html
@@ -42,6 +42,8 @@
             <p><span><span class="bold">Total Carbohydrate</span> 37g</span> <span class="bold">13%</span></p>
             <p class="indent no-divider"><span><span class="bold">Dietary Fiber</span> 4g</span> <span class="bold">13%</span></p>
             <div class="divider"></div>
+            <p class="indent no-divider">Total Sugars 12g</p>
+            <div class="divider"></div>
         </div>    
     </div>
 </body>
