--- a/NutritionLabel/index.html
+++ b/NutritionLabel/index.html
@@ -43,6 +43,8 @@
             <p class="indent no-divider"><span><span class="bold">Dietary Fiber</span> 4g</span> <span class="bold">13%</span></p>
             <div class="divider"></div>
             <p class="indent no-divider">Total Sugars 12g</p>
+            <div class="divider double-indent"></div>
+            <p class="double-indent no-divider">Includes 10g Added Sugars <span class="bold">20%</span></p>
             <div class="divider"></div>
         </div>    
     </div>
