--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Accessibility Quiz">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Accessibility Quiz</title>
 </head>
 <body>
-    
+    <header></header>    
+    <main></main>
 </body>
 </html>
