edit to quiz app

--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -24,16 +24,16 @@
                 <section role="region" aria-labelledby="student-info">
                     <h2 id="student-info">Student Info</h2>
                     <div class="info">
-                        <label for=""></label>
-                        <input />
+                        <label for="student-name">Name:</label>
+                        <input type="text" name="student-name" id="student-name" placeholder="e.g Mike Wizowski" />
                     </div>
                     <div class="info">
-                        <label></label>
-                        <input />
+                        <label for="student-email">Email:</label>
+                        <input type="date" name="student-email" id="email" />
                     </div>
                     <div class="info">
-                        <label></label>
-                        <input />
+                        <label for="birth-date">Date of Birth:</label>
+                        <input type="date" name="birth-date" id="date-of-birth" />
                     </div>
                 </section>
                 <section role="region" aria-labelledby="html-questions">
