--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -65,7 +65,10 @@
                     </div><div class="question-block"></div>
                         <h3><span class="sr-only"></span>2</h3>
                         <fieldset class="question">
-                            <legend></legend>
+                            <legend>
+                                A label element nesting an input element is required to have a 
+                                for attribute with the same value as the input's id
+                            </legend>
                             <ul>
                                 <li>
                                     <label for="q2-a1">
@@ -88,22 +91,36 @@
                     <h2 id="css-questions">CSS</h2>
                     <div class="formrow">
                         <div class="question-block">
-                            Can the CSS margin property accept negative values?
+                            <label for="selector">
+                                Can the CSS margin property accept negative values?
+                            </label>
                         </div>
-                        <div class="answer"></div>
+                        <div class="answer">
+                            <select name="selector" id="selector" required>
+                                <option value="">Select an option</option>
+                                <option value="yes">Yes</option>
+                                <option value="no">No</option>
+                            </select>
+                        </div>
                         <div class="question-block">
-                            Do you have any questions:
+                            <label for="writing-area">Do you have any questions:</label>
                         </div>
-                        <div class="answer"></div>
-                        <select required>
-                            <option value="">Select an option</option>
-                            <option value="yes">Yes</option>
-                            <option value="no">No</option>
-                        </select>
+                        <div class="answer">
+                            <textarea id="writing-area" name="writing-area" rows="10" cols="50"></textarea>
+                        </div>
                     </div>
                 </section>
-
+                <button type="submit">Send</button>
             </form>
         </main>
+        <footer>
+            <address>
+                <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+                San Fransisco<br />
+                California<br />
+                USA
+
+            </address>
+        </footer>
     </body>
 </html>
