edit to unordered list for answer lists

--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -69,7 +69,7 @@
                                 A label element nesting an input element is required to have a 
                                 for attribute with the same value as the input's id
                             </legend>
-                            <ul>
+                            <ul class="answers-list">
                                 <li>
                                     <label for="q2-a1">
                                         <input type="radio" id="q2-a1" value="true" name="q2" />
